--- a/src/MoneyManager.Web/Shared/ColorPicker.razor
+++ b/src/MoneyManager.Web/Shared/ColorPicker.razor
@@ -78,7 +78,7 @@ private string[] PresetColors = new[]
 
 private void OpenColorPicker()
 {
-    // O click no preview vai propagar para o input que est· absolutamente posicionado
+    // O click no preview vai propagar para o input que est√° absolutamente posicionado
 }
 
     private string NormalizeColor(string color)
