--- a/src/MoneyManager.Web/Shared/NavMenu.razor
+++ b/src/MoneyManager.Web/Shared/NavMenu.razor
@@ -18,15 +18,15 @@
             </a>
             <a href="/transactions" class="nav-link" @onclick="@(e => SetActive("/transactions"))">
                 <i class="fas fa-exchange-alt"></i>
-                <span>Transações</span>
+                <span>TransaÃ§Ãµes</span>
             </a>
             <a href="/budgets" class="nav-link" @onclick="@(e => SetActive("/budgets"))">
                 <i class="fas fa-calculator"></i>
-                <span>Orçamentos</span>
+                <span>OrÃ§amentos</span>
             </a>
             <a href="/reports" class="nav-link" @onclick="@(e => SetActive("/reports"))">
                 <i class="fas fa-chart-pie"></i>
-                <span>Relatórios</span>
+                <span>RelatÃ³rios</span>
             </a>
         </nav>
     </Authorized>
