--- a/src/MoneyManager.Web/App.razor
+++ b/src/MoneyManager.Web/App.razor
@@ -18,9 +18,9 @@
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
         <NotFound>
-            <PageTitle>Página não encontrada</PageTitle>
+            <PageTitle>PÃ¡gina nÃ£o encontrada</PageTitle>
             <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Desculpe, não conseguimos encontrar a página que você estava procurando.</p>
+                <p role="alert">Desculpe, nÃ£o conseguimos encontrar a pÃ¡gina que vocÃª estava procurando.</p>
             </LayoutView>
         </NotFound>
     </Router>
