--- a/src/MoneyManager.Web/Pages/Test.razor
+++ b/src/MoneyManager.Web/Pages/Test.razor
@@ -4,15 +4,15 @@
 
 <div class="container mt-5">
     <div class="alert alert-success" role="alert">
-        <h4 class="alert-heading">âœ… Blazor WebAssembly estÃ¡ funcionando!</h4>
-        <p>Se vocÃª estÃ¡ vendo esta mensagem, a aplicaÃ§Ã£o Blazor foi carregada com sucesso.</p>
+        <h4 class="alert-heading">Ã¢Å“â€¦ Blazor WebAssembly estÃƒÂ¡ funcionando!</h4>
+        <p>Se vocÃƒÂª estÃƒÂ¡ vendo esta mensagem, a aplicaÃƒÂ§ÃƒÂ£o Blazor foi carregada com sucesso.</p>
         <hr/>
-        <p class="mb-0">VocÃª pode navegar para <a href="/">Home</a>, <a href="/login">Login</a> ou <a href="/register">Registro</a>.</p>
+        <p class="mb-0">VocÃƒÂª pode navegar para <a href="/">Home</a>, <a href="/login">Login</a> ou <a href="/register">Registro</a>.</p>
     </div>
 
     <div class="card mt-3">
         <div class="card-header">
-            <h5>InformaÃ§Ãµes do Sistema</h5>
+            <h5>InformaÃƒÂ§ÃƒÂµes do Sistema</h5>
         </div>
         <div class="card-body">
             <ul>
